--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update_btn">Update</string>
+
+    <string-array name="units">
+        <item>minutes</item>
+        <item>miles</item>
+        <item>km</item>
+        <item>kg</item>
+        <item>lbs</item>
+    </string-array>
+
 </resources>
