--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update_btn">Update</string>
+    <string name="life_stats">Life Stats</string>
+    <string name="add_entry">Add Entry</string>
+    <string name="update_entry">Update Entry</string>
 
     <string-array name="units">
         <item>minutes</item>
